Project backlog_postgresql {
  database_type: "PostgreSQL"
  Note: "Schema dev dùng PostgreSQL sạch. Tất cả primary key và foreign key domain dùng integer autoincrement. Dự án không chuyển dữ liệu cũ."
}

Enum board_type {
  PUBLIC
  PRIVATE
}

Enum board_member_role {
  ADMIN
  PM
  MEMBER
  GUEST
}

Enum role {
  USER
  ADMIN
}

Enum board_invitation_status {
  PENDING
  ACCEPTED
  DECLINED
  REVOKED
  EXPIRED
}

Enum status_color {
  RED
  ORANGE
  PINK
  INDIGO
  BLUE
  TEAL
  GREEN
  YELLOW
  BRIGHT_RED
  BLACK
}

Table users {
  id integer [pk, increment]
  email varchar(255) [not null, unique]
  display_name varchar(255) [not null]
  avatar text
  user_code varchar(64)
  password text [not null]
  phone varchar(20)
  role role [not null, default: "USER"]
  verify_token text [note: "Token xác thực email nội bộ, không trả ra response DTO"]
  reset_password_token text
  reset_password_expires_at timestamptz
  is_active boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table refresh_token_sessions {
  id integer [pk, increment]
  user_id integer [not null]
  token_hash text [not null, unique]
  replaced_by_token_hash text
  expires_at timestamptz [not null]
  revoked_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    user_id [name: "idx_refresh_token_sessions_user_id"]
    expires_at [name: "idx_refresh_token_sessions_expires_at"]
  }
}

Table boards {
  id integer [pk, increment]
  title varchar(50) [not null]
  board_code varchar(16) [not null, note: "Project key dùng cho ticket code, ví dụ PIPC"]
  description varchar(255)
  type board_type [not null]
  next_card_number integer [not null, default: 1, note: "Số ticket tiếp theo, tăng trong transaction khi tạo card"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz [note: "Soft delete"]

  Indexes {
    board_code [unique, name: "uq_boards_board_code"]
    deleted_at [name: "idx_boards_deleted_at"]
  }
}

Table board_members {
  id integer [pk, increment]
  board_id integer [not null]
  user_id integer [not null]
  role board_member_role [not null, default: "MEMBER"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Indexes {
    (board_id, user_id) [unique, name: "uq_board_members_board_user"]
    user_id [name: "idx_board_members_user_id"]
    board_id [name: "idx_board_members_board_id"]
  }
}

Table board_invitations {
  id integer [pk, increment]
  board_id integer [not null]
  email varchar(255) [not null]
  invitee_user_id integer
  invited_by_user_id integer
  role board_member_role [not null, default: "MEMBER"]
  status board_invitation_status [not null, default: "PENDING"]
  token varchar [not null, unique]
  expires_at timestamptz [not null]
  responded_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Indexes {
    board_id [name: "idx_board_invitations_board_id"]
    invitee_user_id [name: "idx_board_invitations_invitee_user_id"]
    email [name: "idx_board_invitations_email"]
    status [name: "idx_board_invitations_status"]
  }
}

Table columns {
  id integer [pk, increment]
  board_id integer [not null]
  title varchar(50) [not null]
  status_color status_color [not null, default: "BLUE", note: "FE statusColor enum"]
  position integer [not null, default: 0, note: "Thay cho board.columnOrderIds trong DB"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Indexes {
    (board_id, position) [name: "idx_columns_board_position"]
    board_id [name: "idx_columns_board_id"]
  }
}

Table issue_types {
  id integer [pk, increment]
  board_id integer [not null]
  name varchar(50) [not null]
  status_color status_color [not null, default: "BLUE", note: "FE statusColor enum"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Indexes {
    (board_id, name) [unique, name: "uq_issue_types_board_name"]
    board_id [name: "idx_issue_types_board_id"]
  }
}

Table versions {
  id integer [pk, increment]
  board_id integer [not null]
  name varchar(50) [not null]
  start_date date
  end_date date
  description varchar(500) [not null, default: ""]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Indexes {
    board_id [name: "idx_versions_board_id"]
    (board_id, start_date, end_date) [name: "idx_versions_board_dates"]
  }
}

Table cards {
  id integer [pk, increment]
  board_id integer [not null]
  column_id integer [not null]
  card_number integer [not null, note: "Sequence number theo board"]
  card_code varchar(40) [not null, note: "Ticket key ổn định, ví dụ PIPC-4119"]
  title varchar(50) [not null]
  description text
  priority integer [note: "FE priority"]
  assignee_user_id integer
  registered_by_user_id integer
  created_by_user_id integer
  issue_type_id integer
  version_id integer
  start_date date
  due_date date
  estimated_hours varchar(32) [note: "Giữ dạng string để tương thích FE phase đầu"]
  actual_hours varchar(32) [note: "Giữ dạng string để tương thích FE phase đầu"]
  position integer [not null, default: 0, note: "Thay cho column.cardOrderIds trong DB"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Indexes {
    card_code [unique, name: "uq_cards_card_code"]
    (board_id, card_number) [unique, name: "uq_cards_board_card_number"]
    (board_id, deleted_at) [name: "idx_cards_board_deleted_at"]
    (column_id, position) [name: "idx_cards_column_position"]
    assignee_user_id [name: "idx_cards_assignee_user_id"]
    registered_by_user_id [name: "idx_cards_registered_by_user_id"]
    created_by_user_id [name: "idx_cards_created_by_user_id"]
    issue_type_id [name: "idx_cards_issue_type_id"]
    version_id [name: "idx_cards_version_id"]
    priority [name: "idx_cards_priority"]
    start_date [name: "idx_cards_start_date"]
    due_date [name: "idx_cards_due_date"]
  }
}

Table comments {
  id integer [pk, increment]
  card_id integer [not null]
  user_id integer [not null]
  content text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Indexes {
    (card_id, deleted_at) [name: "idx_comments_card_deleted_at"]
    user_id [name: "idx_comments_user_id"]
  }
}

// Foreign keys
Ref: refresh_token_sessions.user_id > users.id [delete: cascade]

Ref: board_members.board_id > boards.id [delete: cascade]
Ref: board_members.user_id > users.id [delete: restrict]

Ref: board_invitations.board_id > boards.id [delete: cascade]
Ref: board_invitations.invitee_user_id > users.id [delete: cascade]
Ref: board_invitations.invited_by_user_id > users.id [delete: set null]

Ref: columns.board_id > boards.id [delete: cascade]
Ref: issue_types.board_id > boards.id [delete: cascade]
Ref: versions.board_id > boards.id [delete: cascade]

Ref: cards.board_id > boards.id [delete: cascade]
Ref: cards.column_id > columns.id [delete: cascade]
Ref: cards.assignee_user_id > users.id [delete: set null]
Ref: cards.registered_by_user_id > users.id [delete: set null]
Ref: cards.created_by_user_id > users.id [delete: set null]
Ref: cards.issue_type_id > issue_types.id [delete: set null]
Ref: cards.version_id > versions.id [delete: set null]

Ref: comments.card_id > cards.id [delete: cascade]
Ref: comments.user_id > users.id [delete: cascade]
